--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 -->
 
 <head>
-	<title>Junk Changes Website</title>
+	<title>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,7 +19,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			I'm not sure too on what will go here, but I'm sure it will be nice.
+			Just nothing but trouble!
 		</p>
 	</main>
 	<footer class="container">
