mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <! --
 	Copyright 2014 Git.Training
-	Adding changes before rebasing conflicts.
+	Some silly changes
 -->
 
 <head>
-	<title>A Great Website</title>
+	<title>Junk Changes Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
